DevTools: properly report values for CSSOM important properties

DevTools expect the "!important" modifier to be a part of the property
value. This patch brings CSSOM-generated property values in line with
the assumption.

BUG=735282
R=dgozman

Change-Id: I2b3b852c66e07799c6437dd04841b5197b6c3201
Reviewed-on: https://chromium-review.googlesource.com/820974
Commit-Queue: Andrey Lushnikov <lushnikov@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523584}
Former-commit-id: 3a752fccf949634ba488c829191299fa6b306f0b